Composer: Restore X-Evolution headers when send fails
I've got three email accounts configured for Evolution, two Google ones via GNOME Online Accounts, and an Exchange one. One of the Google ones is set as my default account. For some reason Evolution occasionally sends emails via the default one even when replying to messages received from one of the other accounts—when composing an email I'll select the desired account, but when the message gets sent the default seems to be used anyway.
As I use particular email addresses for particular purposes, it's at best an annoying issue and at worst leaks privacy information that it really shouldn't.
I'm currently using Evolution 3.32.4 and GNOME Online Accounts 3.32.0.