I#561 - Composer: Restore X-Evolution headers when send fails

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/561